<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".ui.signin.SignInActivity">

    <include
        android:id="@+id/viewHeader"
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tilLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--    <androidx.appcompat.widget.AppCompatEditText-->
    <!--        android:id="@+id/etNick"-->
    <!--        style="@style/FormEditText"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="44dp"-->
    <!--        android:layout_marginBottom="12dp"-->
    <!--        android:hint="@string/signin_form_nickname"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/etName"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/viewHeader" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"
        tools:hint="Matricula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            style="@style/FormEditText"
            android:inputType="textPassword|textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        style="@style/FormEditText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/signin_form_real_name"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/FormEditText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/signin_form_email"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/FormEditText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/signin_form_password"
        app:layout_constraintBottom_toTopOf="@+id/etVerifyPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etVerifyPassword"
        style="@style/FormEditText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:hint="@string/signin_form_repeat_password"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_button_loggin"
        app:layout_constraintBottom_toTopOf="@+id/viewBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVerifyPassword" />

    <include
        android:id="@+id/viewBottom"
        layout="@layout/view_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>